<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AugManium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CategoryText">Believe in yourself, take on your challenges, dig \n within yourself to conquer fears. </string>
    <string name="scanDis">Please wait , scanning your face for\n identification  </string>
    <string name="signInText">Sign up to get started and experience \ngreat shopping deals</string>
    <string name="welcomeText">Introducing Next Gen Product \n Experiance</string>

    <string name="action_product">Products</string>
    <string name="action_home">Home</string>
    <string name="action_catalog">Catalog</string>
    <string name="action_category">Category</string>
    <string name="action_WishList">WishList</string>
    <string name="action_Notification">Notification</string>
</resources>
